charts/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jenkins.karned.bzh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myjenkins
            port:
              number: 8080
